--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,26 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "backend/index.js", 
-        "use": "@vercel/node"
-      },
-      {
-        "src": "frontend/package.json", 
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build" 
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)", 
-        "dest": "backend/index.js"
-      },
-      {
-        "src": "/(.*)", 
-        "dest": "frontend/build/$1"
-      }
-    ]
-  }
+  "version":2,
+  "builds": [
+    {"src": "*.js","use":"@vercel/node"}
+  ],
+  "roues": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
