--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {"src": "*.js","use":"@vercel/node"}
   ],
-  "roues": [
+  "routes": [
     {
       "src": "/(.*)",
       "dest": "/"
